# csf02_discord_bot

./: Cargo.toml
src/: main.rs
src/commands/: mod.rs  ping.rs
src/commands/minecraft/: start.rs
