[package]
name = "csf02_discord_bot"
version = "0.1.0"
edition = "2021"
authors = ["Hu Bowen <contact@hubowen.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
pretty_env_logger = "0.5.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serenity_ctrlc = "0.3.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
